login page: change username to login

--- a/templates/index.html
+++ b/templates/index.html
@@ -241,7 +241,7 @@
         <h2 style="text-align: center; margin-bottom: 20px; color: #374151;">Вход в систему</h2>
         <form id="loginForm">
           <div class="form-group">
-            <label for="login-username">Имя пользователя</label>
+            <label for="login-username">Логин</label>
             <input type="text" id="login-username" name="username" required placeholder="Введите ваш логин">
           </div>
           <div class="form-group">
@@ -260,8 +260,8 @@
         <h2 style="text-align: center; margin-bottom: 20px; color: #374151;">Регистрация</h2>
         <form id="registerForm">
           <div class="form-group">
-            <label for="reg-username">Имя пользователя</label>
-            <input type="text" id="reg-username" name="username" required placeholder="Придумайте username">
+            <label for="reg-username">Логин</label>
+            <input type="text" id="reg-username" name="username" required placeholder="Придумайте логин">
           </div>
           <div class="form-group">
             <label for="reg-password">Пароль</label>
